tests/fixtures/stl/errors/test_eval_add_types.stl
// Error: invalid operand types for addition
// expect-error: Invalid types for addition
define x = ("a" + 5);
prompt p { is { f is text<length=4>; } return { use f; } }
export p as main;
